--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "fundrive-lanzou"
-version = "1.2.70"
+version = "1.2.71"
 description = "fundrive"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = [ "funutil>=1.0.43",]
+dependencies = [ "cryptography>=44.0.0", "funutil>=1.0.43",]
 [[project.authors]]
 name = "niuliangtao"
 email = "farfarfun@qq.com"
