--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,30 @@
 [project]
 name = "fundrive-lanzou"
-version = "1.2.72"
+version = "1.2.73"
 description = "fundrive"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [ "cryptography>=44.0.0", "funutil>=1.0.43",]
 [[project.authors]]
-name = "niuliangtao"
+name = "牛哥"
+email = "niuliangtao@qq.com"
+
+[[project.authors]]
+name = "farfarfun"
 email = "farfarfun@qq.com"
+
+[[project.maintainers]]
+name = "牛哥"
+email = "niuliangtao@qq.com"
+
+[[project.maintainers]]
+name = "farfarfun"
+email = "farfarfun@qq.com"
+
+[project.urls]
+Organization = "https://github.com/farfarfun"
+Repository = "https://github.com/farfarfun/fundrive-lanzou"
+Releases = "https://github.com/farfarfun/fundrive-lanzou/releases"
 
 [tool.setuptools]
 license-files = []
